# MESO

./: .gitignore  Option Strategy Quantitative Analysis White Paper.md  README.md  start.sh
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_core_tables.py
apps/api/app/: main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: dashboard.py  filters.py  signals.py
apps/api/app/config/: field_mapping.yaml  scoring.yaml  ui.yaml
apps/api/app/core/: config.py  enums.py  exceptions.py  settings.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/repositories/: batches.py  feature_snapshots.py  raw_snapshots.py  signal_snapshots.py
apps/api/app/schemas/: api_response.py  feature_schema.py  history_schema.py  import_schema.py  scoring_schema.py
apps/api/app/services/: classifier.py  config_loader.py  cross_section_ranker.py  event_filter.py  feature_engine.py  history_service.py  import_normalizer.py  import_service.py  raw_option_record_sync.py  scoring_engine.py  shift_engine.py  validators.py
apps/api/app/testing/: __init__.py  analysis_records.py  feature_scoring.py  golden_classifier_samples.py  golden_feature_scoring_samples.py
apps/api/tests/: test_dashboard_delete_date_group.py  test_dashboard_trend_consistency.py  test_import_json_to_app_db.py
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: App.tsx  main.tsx  styles.css
scripts/: import_json_to_app_db.py  import_raw_data_to_new_db.py  sync_raw_option_records_to_app_db.py
(+15 files in other folders)
