[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meso-api"
version = "0.1.0"
description = "Backend skeleton for the Meso Options Analytics System."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.9,<3.0",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
